# Self-Healing-Bug-Agent

./: .gitignore  DEMO_RUNBOOK.md  README.md  TECHNICAL.md
ai-repair-dashboard/: tsconfig.tsbuildinfo  (+1 more)
self-healing-bug-agent/: .env.example  .gitignore  AGENTS.md  Dockerfile  QUICK_INTEGRATION_GUIDE.md  README.md  docker-compose.yml  pyproject.toml  test_backend.py  test_imports.py  test_output.txt
self-healing-bug-agent/.github/workflows/: ci.yml
self-healing-bug-agent/documentation/: INTEGRATION_SUMMARY.md  architecture.md  automation.md  flows.md  integration_contracts.md  module3_integration.md  permissions.md  sandbox_verification.md  tests.md  variables.md
self-healing-bug-agent/src/healing_agent/: __init__.py  __main__.py  app.py  config.py  models.py
self-healing-bug-agent/src/healing_agent/api/: __init__.py  schemas.py
self-healing-bug-agent/src/healing_agent/integrations/: github_webhook.py
self-healing-bug-agent/src/healing_agent/modules/: __init__.py  contracts.py  mock_pr_publisher.py  mock_reproducer.py  mock_workspace.py  repair_adapter.py  test_writer_adapter.py
self-healing-bug-agent/src/healing_agent/modules/sandbox_verification/: __init__.py  adapter.py  exceptions.py  models.py  requirements.txt  verifier.py
self-healing-bug-agent/src/healing_agent/modules/shared/: model_client.py
self-healing-bug-agent/src/healing_agent/orchestrator/: __init__.py  state_machine.py  store.py  workflow.py
self-healing-bug-agent/tests/: test_sandbox_adapter.py  test_sandbox_verification.py  test_state_machine.py  test_webhook.py  test_workflow.py
(+46 files in other folders)
