[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "self-healing-bug-agent"
version = "0.1.0"
description = "Closed-loop bug reproduction, repair, regression testing, and verified PR orchestration."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "pydantic>=2.8,<3",
  "pydantic-settings>=2.4,<3",
  "uvicorn[standard]>=0.30,<1",
  "openai>=1.0,<2",
]

[project.optional-dependencies]
agents = ["openai-agents"]
dev = [
  "httpx>=0.27,<1",
  "pytest>=8.2,<9",
  "pytest-asyncio>=0.23,<1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]
